RegisterDog adding to the database (no pictures, hardcoding personalities)